syntax = "proto3";

package proto;
option go_package = "github.com/espitman/gws-chat/pkg/protos/protogen/message-service";

message V1CreateRoomRequest {
  int32 userId = 1;
}

message V1AddMemberToRoomRequest {
  string roomID = 1;
  int32 userId = 2;
}