syntax = "proto3";

package proto;
option go_package = "github.com/espitman/gws-chat/pkg/protos/protogen/user-service";

message User {
  int32 id = 1;
  string name = 2;
  string password = 3;
  string avatar = 4;
  string status = 5;
  string token = 6;
  bool isOnline = 7;
}


message UserPublic {
  int32 id = 1;
  string name = 2;
  string avatar = 3;
  string status = 4;
  bool isOnline = 5;
}