syntax = "proto3";

package proto;
option go_package = "github.com/espitman/gws-chat/pkg/protos/protogen/user-service";

message V1LoginRequest {
  string Name = 2; // @gotags: validate:"required"
  string Password = 3; // @gotags: validate:"required"
}
